<resources>
    <string name="app_name">BusTracker</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_to_bussewa">New to BusSewa?</string>
    <string name="already_have_an_account">Alreay have an accout?</string>
    <string name="join">Join</string>
    <string name="username">Username</string>
    <string name="txt_welcome">Welcome</string>
    <string name="welcome_to_bussewa">Welcome to BusSewa</string>
    <string name="sign_in">sign in</string>
    <string name="connect_your_account_of_the_best_custom_experience">Connect your account of the best customer experience</string>
    <string name="bus_route">Bus Route</string>
    <string name="job_vacancy">Job Vacancy</string>
    <string name="todo">TODO</string>
    <string name="news">News</string>
    <string name="bus_location">Bus Location</string>
</resources>
